fixing header z-index bug

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -59,6 +59,10 @@
         background-size: cover;
     }
 
+    .header-menu{
+        @apply absolute opacity-0 invisible group-hover:opacity-100 group-hover:visible top-full w-52 p-6 space-y-3 text-white bg-slate-800 text-base tracking-normal shadow-xl rounded-2xl transition-all z-50
+    }
+
     .content-hover{
         @apply  hover:bg-gradient-to-br hover:from-sky-500 hover:to-indigo-600 to-80% hover:text-white transition-all duration-300
     }
@@ -73,11 +77,11 @@
     }
 
     .main-header{
-        @apply md:inline-block hidden md:w-full md:h-20 md:sticky  bg-slate-900 text-white font-Dana shadow-md mt-0
+        @apply md:inline-block hidden md:w-full md:h-20 md:sticky  bg-slate-900 text-white font-Dana shadow-md mt-0 z-50
     }
 
     .main-container{
-        @apply w-[1280px] mx-auto my-5 bg-zinc-200 rounded-2xl shadow-xl
+        @apply w-[1280px] mx-auto my-5 bg-zinc-200 rounded-2xl shadow-xl pt-5
     }
 
     .ltr{
